# melee-macros

./: .gitignore  README.md  btnprobe.py  config.yaml  hidprobe.py  pyproject.toml  requirements.txt  run.py
docs/: fox-techniques.md
docs/research/: aerials_combos.md  movement.md  shine_defense.md
src/melee_macros/: __init__.py  backends.py  config.py  controller.py  engine.py  gamestate.py  inputs.py  library.py  macro.py  pipe.py  reactive.py
src/melee_macros/macros/: fox.py
tests/: test_engine.py  test_reactive.py
