[project]
name = "melee-macros"
version = "0.1.0"
description = "One-button competitive Fox tech for Slippi/Dolphin"
readme = "README.md"
# pygame has no wheels for 3.14 yet; pin to a supported range.
requires-python = ">=3.12,<3.14"
dependencies = [
    "pygame>=2.6.1",
    "PyYAML>=6.0",
    # Raw-HID reader for the Mayflash GameCube adapter, which SDL/pygame cannot
    # parse on macOS (enumerates with 0 axes/0 buttons). See HidGcReader.
    "hidapi>=0.14",
]

[project.optional-dependencies]
# Frame-accurate backend. Install with: uv sync --extra libmelee
libmelee = ["melee>=0.38.0"]

[tool.uv]
# This is an application driven via run.py (which manages sys.path), not an
# installable library — just let uv manage the environment.
package = false
